// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`hoist-jest > factory validation (REQ-005) > should allow array destructuring parameters in factory 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => { const [a, b] = [1, 2]; return { a, b }; });
"
`;

exports[`hoist-jest > factory validation (REQ-005) > should allow array destructuring with holes in factory 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => { const [, b] = [1, 2]; return b; });
"
`;

exports[`hoist-jest > factory validation (REQ-005) > should allow case-insensitive mock prefix 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => ({ a: MockClass, b: MOCK_VALUE, c: mockFn }));
"
`;

exports[`hoist-jest > factory validation (REQ-005) > should allow catch clause variable 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => { try { }
catch (e) {
    return e;
} });
"
`;

exports[`hoist-jest > factory validation (REQ-005) > should allow destructuring parameters in factory 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => { const { a, b } = { a: 1, b: 2 }; return { a, b }; });
"
`;

exports[`hoist-jest > factory validation (REQ-005) > should allow function declarations inside factory 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => { function helper() { return 1; } return helper(); });
"
`;

exports[`hoist-jest > factory validation (REQ-005) > should allow nested object destructuring in factory 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => { const { a: { b } } = { a: { b: 1 } }; return b; });
"
`;

exports[`hoist-jest > factory validation (REQ-005) > should allow property access on allowed objects 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => ({ fn: jest.fn() }));
"
`;

exports[`hoist-jest > factory validation (REQ-005) > should allow shorthand property with allowed name 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => ({ undefined }));
"
`;

exports[`hoist-jest > factory validation (REQ-005) > should hoist factory referencing __coverage variable 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => cov_hash123);
import { foo } from "./foo";
"
`;

exports[`hoist-jest > factory validation (REQ-005) > should hoist factory referencing allowed identifiers 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => ({ x: undefined, y: NaN, z: Infinity }));
import { foo } from "./foo";
"
`;

exports[`hoist-jest > factory validation (REQ-005) > should hoist factory referencing coverage variable 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => __cov_x);
import { foo } from "./foo";
"
`;

exports[`hoist-jest > factory validation (REQ-005) > should hoist factory referencing jest and expect 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => jest.fn());
import { foo } from "./foo";
"
`;

exports[`hoist-jest > factory validation (REQ-005) > should hoist factory referencing mock-prefixed variable 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => mockFoo);
import { foo } from "./foo";
"
`;

exports[`hoist-jest > factory validation (REQ-005) > should hoist factory with function parameters 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => { return (a: string) => a; });
import { foo } from "./foo";
"
`;

exports[`hoist-jest > factory validation (REQ-005) > should hoist factory with local variables 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => { const x = 1; return x; });
import { foo } from "./foo";
"
`;

exports[`hoist-jest > factory validation (REQ-005) > should hoist mock with no factory 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo");
import { foo } from "./foo";
"
`;

exports[`hoist-jest > factory validation (REQ-005) > should not validate non-function second argument 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", options);
import { foo } from "./foo";
"
`;

exports[`hoist-jest > factory validation (REQ-005) > should not validate unmock factories 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.unmock("./foo");
import { foo } from "./foo";
"
`;

exports[`hoist-jest > factory validation (REQ-005) > should skip property names in object literals 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => ({ someVar: 42 }));
"
`;

exports[`hoist-jest > mock-prefix variable hoisting (REQ-006) > should hoist multiple mock-prefix vars 1`] = `
"import { jest } from "@rbxts/jest-globals";
const mockA = jest.fn();
const mockB = jest.fn();
jest.mock("./a", () => ({ a: mockA, b: mockB }));
import { a } from "./a";
"
`;

exports[`hoist-jest > mock-prefix variable hoisting (REQ-006) > should hoist single mock-prefix var referenced in factory 1`] = `
"import { jest } from "@rbxts/jest-globals";
const mockFoo = jest.fn();
jest.mock("./foo", () => ({ foo: mockFoo }));
import { foo } from "./foo";
"
`;

exports[`hoist-jest > should be idempotent when already hoisted 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo");
import { foo } from "./foo";
"
`;

exports[`hoist-jest > should hoist both mock and unmock 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./a");
jest.unmock("./b");
import { a } from "./a";
"
`;

exports[`hoist-jest > should hoist jest.mock above imports 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo");
import { foo } from "./foo";
"
`;

exports[`hoist-jest > should hoist jest.unmock above imports 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.unmock("./foo");
import { foo } from "./foo";
"
`;

exports[`hoist-jest > should hoist mock-prefixed variables 1`] = `
"import { jest } from "@rbxts/jest-globals";
const mockFoo = jest.fn();
jest.mock("./foo", () => ({ foo: mockFoo }));
import { foo } from "./foo";
"
`;

exports[`hoist-jest > should ignore non-jest objects 1`] = `
"import { foo } from "./foo";
other.mock("./foo");
"
`;

exports[`hoist-jest > should ignore shadowed jest binding 1`] = `
"import { foo } from "./foo";
const jest = { mock: () => { } };
jest.mock("./foo");
"
`;

exports[`hoist-jest > should keep @rbxts/jest-globals import first 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo");
import { foo } from "./foo";
"
`;

exports[`hoist-jest > should leave non-hoistable jest calls in place 1`] = `
"import { foo } from "./foo";
jest.dontMock("./foo");
"
`;

exports[`hoist-jest > should not hoist non-call expression statements 1`] = `
"import { foo } from "./foo";
x = 5;
"
`;

exports[`hoist-jest > should not hoist plain function calls 1`] = `
"import { foo } from "./foo";
foo("./bar");
"
`;

exports[`hoist-jest > should pass through unchanged when no jest calls 1`] = `
"import { foo } from "./foo";
console.log(foo);
"
`;

exports[`hoist-jest > should preserve factory functions in jest.mock 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => ({ default: 42 }));
import { foo } from "./foo";
"
`;
